# QT-YTdlp-Client

./: CMakeLists.txt  DownloadSettings.cpp  DownloadSettings.h  DownloadSettings.ui  Downloader.cpp  Downloader.h  GifManager.cpp  GifManager.h  main.cpp  yt_dlp.cpp  yt_dlp.h  yt_dlp.ui
documentation/: 10-27-24 Tasks  10-29-24 Tasks  11-2-24 Tasklist
ui/: ytDLP.ui
